# AFS_acquisition

./: .flake8  .gitignore  CHANGELOG.md  README.md  build_exe.bat  build_exe.py  mypy.ini  pyproject.toml  requirements.txt  verify_system.py
src/: __init__.py  logger.py  main.py
src/camera/: camera_controller.py
src/controllers/: camera_controller.py  device_manager.py  function_generator_controller.py  oscilloscope_controller.py  stage_manager.py  xy_stage_controller.py  z_stage_controller.py
src/controllers/xy_stage/: stage_manager.py  xy_stage_controller.py
src/ui/: acquisition_controls_widget.py  camera_settings_widget.py  camera_widget.py  force_path_designer_widget.py  frequency_settings_widget.py  hardware_status_dialog.py  keyboard_shortcuts.py  lookup_table_widget.py  main_window.py  measurement_controls_widget.py  measurement_settings_widget.py  resonance_finder_widget.py  stages_widget.py
src/ui/dialogs/: hardware_status_dialog.py
src/ui/widgets/: acquisition_controls_widget.py  camera_settings_widget.py  camera_widget.py  measurement_controls_widget.py  measurement_settings_widget.py  xy_stage_widget.py
src/utils/: compression_analyzer.py  config_manager.py  constants.py  data_integrity.py  exceptions.py  hdf5_exporter.py  hdf5_video_recorder.py  imports.py  keyboard_shortcuts.py  logger.py  performance_monitor.py  read_hdf5_metadata.py  retry_utils.py  state_recovery.py  status_display.py  styled_dialogs.py  validation.py  visa_helper.py
